--- a/pages/JPEM.html
+++ b/pages/JPEM.html
@@ -1,9 +1,12 @@
 <html>
 <head>
+	<title>Home</title>
+  	<meta charset="utf-8">
 </head>
 <body>
 <div>
 	<p>Hola, soy Juan Pablo</p>
+	<p>Modificación uno de JPEM</p>
 </div>	
 </body>
 </html>
